second commit not changes

--- a/index.html
+++ b/index.html
@@ -719,18 +719,22 @@
                         <p class="footer_card_conatiner_headidng" id="first_footer_conatiner_headidng">
                             Enquire Form
                         </p>
+                        <form method="submit" action="#" id="footer_form">
                             <div id="footer_form_conatiner">
                                 <div class="footer_form_input_content">
-                                    <input type="text" id="name" placeholder="Name" />
+                                    <input type="text"id="UerName" placeholder="Name" />
+                                    <span id="show_error"></span>
                                 </div>
                                 <div class="footer_form_input_content">
                                     <input type="tel" id="phone" placeholder="Phone" />
+                                     <span id="show_error"></span>
                                 </div>
                                 <div class="footer_form_input_content">
                                     <textarea id="textarea" placeholder="Message" rows="20" cols="30"></textarea>
                                 </div>
                                 <button id="footer_button">SUBMIT</button>
                             </div>
+                        </form>
                     </div>
                     <!--Forth footer container end-->
                 </div>
