changes in css and add more comments

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                         <hr/>
                         <!--nav top bar end-->
 
+                        <!-- nav bottom bar start-->
                         <div id="nav_bottombar">
                             <div class="nav_bottombar_left">
+                                <!--Navigation bar start-->
                                 <ul>
                                     <li><a href="">Home</a></li>
                                     <li><a href="">About</a></li>
@@ -77,12 +79,14 @@
                                     <li><a href="">Blog</a></li>
                                     <li><a href="">Contact us</a></li>
                                 </ul>
+                                <!--Navigation bar end-->
                             </div>
 
                             <div class="nav_bottombar_right">
                                 <img src="images/socia_media_icons.png" alt="socia_media_icons" />
                             </div>
                         </div>
+                        <!-- nav bottom bar end-->
                     </nav>
                 <!--Navigation bar end-->
                 </header>
@@ -104,7 +108,7 @@
                         </p>
                         <button class="banner_button">READ MORE</button>
                     </div>
-                    <img src="Images/logo.png" alt="logo" id="banner_logo" />
+                    <a href="#"><img src="Images/logo.png" alt="logo" id="banner_logo" /></a>
                 </div>
             </section>
             <!--Banner section end-->
